--- a/変数.ipynb
+++ b/変数.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"大橋\""
+    "name = \"opashi\""
    ]
   },
   {
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "こんにちは。大橋です。\n"
+      "こんにちは。opasshiです。\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "こんにちは。大橋です。\n"
+      "こんにちは。opashiです。\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "こんにちは。大橋です。年齢は25歳です。\n"
+      "こんにちは。ですopashi。年齢は25歳です。\n"
      ]
     }
    ],
