--- a/変数.ipynb
+++ b/変数.ipynb
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "こんにちは。opasshiです。\n"
+      "こんにちは。opashiです。\n"
      ]
     }
    ],
