--- a/文字列.ipynb
+++ b/文字列.ipynb
@@ -28,12 +28,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "こんにちは。大橋です。\n"
+      "こんにちは。opashiです。\n"
      ]
     }
    ],
    "source": [
-    "print(\"こんにちは。\" + \"大橋です。\")"
+    "print(\"こんにちは。\" + \"opashiです。\")"
    ]
   },
   {
